--- a/www.sombahasbo.com/tentangkami.html
+++ b/www.sombahasbo.com/tentangkami.html
@@ -10,27 +10,27 @@
     <meta name="description" content="Jasa Konstruksi Jakarta, Jasa Arsitektur, Jasa Instalasi Listrik, Perusahaan Konstruksi, Building Services, Architecture, Engineering"><meta name="keywords" content="jasa, konstruksi, jakarta, arsitektur, pembangunan gedung, jalan tol, architecture"><title>PT. Naviri Multi Konstruksi - Perfection is Our Priority</title>
     <link href="https://fonts.googleapis.com/css?family=Francois+One|Lato:400,700" rel="stylesheet">
 
-    <link rel="icon" href="https://naviri.co.id/public/uploads/favicon.png" type="image/png">
+    <link rel="icon" href="https://sombahasbo/public/uploads/favicon.png" type="image/png">
 
-   	<link rel='stylesheet' href='../naviri.co.id/public/css/animate.min.css'>
-    <link rel='stylesheet' href='../naviri.co.id/public/css/bootstrap.min.css'>
-    <link rel='stylesheet' href='../naviri.co.id/public/css/datepicker3.css'>
-    <link rel='stylesheet' href='../naviri.co.id/public/css/font-awesome.min.css'>
-    <link rel='stylesheet' href='../naviri.co.id/public/css/lightbox.min.css'>
-    <link rel='stylesheet' href='../naviri.co.id/public/css/owl.carousel.min.css'>
-    <link rel='stylesheet' href='../naviri.co.id/public/css/hover-min.css'>
-    <link rel='stylesheet' href='../naviri.co.id/public/css/meanmenu.css'>
-    <link rel='stylesheet' href='../naviri.co.id/public/css/spacing.css'>
-    <link rel='stylesheet' href='../naviri.co.id/public/css/style.css'>
-    <link rel='stylesheet' href='../naviri.co.id/public/css/responsive.css'>
+   	<link rel='stylesheet' href='../sombahasbo/public/css/animate.min.css'>
+    <link rel='stylesheet' href='../sombahasbo/public/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='../sombahasbo/public/css/datepicker3.css'>
+    <link rel='stylesheet' href='../sombahasbo/public/css/font-awesome.min.css'>
+    <link rel='stylesheet' href='../sombahasbo/public/css/lightbox.min.css'>
+    <link rel='stylesheet' href='../sombahasbo/public/css/owl.carousel.min.css'>
+    <link rel='stylesheet' href='../sombahasbo/public/css/hover-min.css'>
+    <link rel='stylesheet' href='../sombahasbo/public/css/meanmenu.css'>
+    <link rel='stylesheet' href='../sombahasbo/public/css/spacing.css'>
+    <link rel='stylesheet' href='../sombahasbo/public/css/style.css'>
+    <link rel='stylesheet' href='../sombahasbo/public/css/responsive.css'>
     <!--link rel='stylesheet' href='<-?php echo base_url(); ?>public/style.css'-->
     <!-- tambahan -->
-    <link rel='stylesheet' href='../naviri.co.id/public/css/venobox.css'>
+    <link rel='stylesheet' href='../sombahasbo/public/css/venobox.css'>
 
     <!-- VIDEO POPUP -->
-    <link rel="stylesheet" type="text/css" href="../naviri.co.id/public/vendor/assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="../naviri.co.id/public/vendor/assets/css/effect.css">
-    <link rel="stylesheet" type="text/css" href="../naviri.co.id/public/vendor/assets/src/flashy.min.css">
+    <link rel="stylesheet" type="text/css" href="../sombahasbo/public/vendor/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../sombahasbo/public/vendor/assets/css/effect.css">
+    <link rel="stylesheet" type="text/css" href="../sombahasbo/public/vendor/assets/src/flashy.min.css">
 
             <!-- <meta property="og:title" content="
 <div style="border:1px solid #990000;padding-left:20px;margin:0 0 10px 0;">
@@ -463,7 +463,7 @@
 
 
     <div id="preloader">
-        <div id="status" style="background-image: url('../naviri.co.id/public/img/preloader.gif')"></div>
+        <div id="status" style="background-image: url('../sombahasbo/public/img/preloader.gif')"></div>
     </div>
 
     <div class="header-area">
@@ -498,34 +498,34 @@
             <div class="row">
                 <div class="col-md-3 col-sm-12">
                     <div class="logo">
-                        <a href="index.html"><img src="../naviri.co.id/public/uploads/logo.png" alt="Logo"></a>
+                        <a href="index.html"><img src="../sombahasbo/public/uploads/logo.png" alt="Logo"></a>
                     </div>
                 </div>
                 <div class="col-md-9 col-sm-12 main-menu" style="display: block;">
                     <div class="main-menu-item">
                  		<ul class="nav-menu">
-                 			<li><a href="https://naviri.co.id/">Beranda</a></li>
+                 			<li><a href="https://sombahasbo/">Beranda</a></li>
                             <li class="menu-item-has-children"><a href="javascript:void();">Tentang Kami</a>
                                 <ul class="sub-menu">
-                                    <li><a href="https://naviri.co.id/about">Profil Kami</a></li>
-                                    <li><a href="https://naviri.co.id/gallery">Gallery</a></li>
-                                    <li><a href="https://naviri.co.id/video">Video Gallery</a></li>
-                                    <li><a href="https://naviri.co.id/faq">FAQ</a></li>
-                                    <li><a href="https://naviri.co.id/testimonial">Testimonial</a></li>
+                                    <li><a href="https://sombahasbo/about">Profil Kami</a></li>
+                                    <li><a href="https://sombahasbo/gallery">Gallery</a></li>
+                                    <li><a href="https://sombahasbo/video">Video Gallery</a></li>
+                                    <li><a href="https://sombahasbo/faq">FAQ</a></li>
+                                    <li><a href="https://sombahasbo/testimonial">Testimonial</a></li>
                                 </ul>
                             </li>
-                            <li><a href="https://naviri.co.id/service">Bisnis Kami</a></li>
-                            <li><a href="https://naviri.co.id/portfolio">Proyek</a></li>
-                            <li><a href="https://naviri.co.id/news/page">Berita</a></li>
-                            <li><a href="https://naviri.co.id/contact">Kontak</a></li>
-                            <li><a href="https://naviri.co.id/career/page">CAREER</a></li>
+                            <li><a href="https://sombahasbo/service">Bisnis Kami</a></li>
+                            <li><a href="https://sombahasbo/portfolio">Proyek</a></li>
+                            <li><a href="https://sombahasbo/news/page">Berita</a></li>
+                            <li><a href="https://sombahasbo/contact">Kontak</a></li>
+                            <li><a href="https://sombahasbo/career/page">CAREER</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-<div class="banner-slider" style="background-image: url(https://naviri.co.id/public/uploads/banner_about.jpg)">
+<div class="banner-slider" style="background-image: url(https://sombahasbo/public/uploads/banner_about.jpg)">
     <div class="bg"></div>
     <div class="bannder-table">
         <div class="banner-text">
@@ -537,7 +537,7 @@
 <div class="container pt_40 pb_40">
     <div class="row">
         <div class="col-md-6">
-            <img src="https://naviri.co.id/public/img/about.jpg" alt=""><br>
+            <img src="https://sombahasbo/public/img/about.jpg" alt=""><br>
         </div>
         <div class="col-md-6">
             <h3>TENTANG KAMI</h3>
@@ -594,7 +594,7 @@
                 <h2>STRUKTUR ORGANISASI</h2>
             </div>
             <div class="col-md-12">
-                <a class="venobox vbox-item" href="https://naviri.co.id/public/img/struktur-organisasi.png"><img src="https://naviri.co.id/public/img/struktur-organisasi.png" alt="image alt"></a>
+                <a class="venobox vbox-item" href="https://sombahasbo/public/img/struktur-organisasi.png"><img src="https://sombahasbo/public/img/struktur-organisasi.png" alt="image alt"></a>
             </div>
         </div>
     </div>
@@ -606,7 +606,7 @@
             <div class="col-md-4 col-sm-4">
                 <div class="footer-contact-item">
                     <ul>
-                        <li><img src="../naviri.co.id/public/uploads/footer_address_icon.png" alt="Icon"></li>
+                        <li><img src="../sombahasbo/public/uploads/footer_address_icon.png" alt="Icon"></li>
                         <li>
                             <h4>Alamat</h4>
                             <p>
@@ -620,7 +620,7 @@ Jakarta Timur-DKI Jakarta 13120</p>
             <div class="col-md-4 col-sm-4">
                 <div class="footer-contact-item">
                     <ul>
-                        <li><img src="../naviri.co.id/public/uploads/footer_phone_icon.png" alt="Icon"></li>
+                        <li><img src="../sombahasbo/public/uploads/footer_phone_icon.png" alt="Icon"></li>
                         <li>
                             <h4>Hubungi Kami</h4>
                             <p>
@@ -633,7 +633,7 @@ Jakarta Timur-DKI Jakarta 13120</p>
             <div class="col-md-4 col-sm-4">
                 <div class="footer-contact-item">
                     <ul>
-                        <li><img src="../naviri.co.id/public/uploads/footer_working_hour_icon.png" alt="Icon"></li>
+                        <li><img src="../sombahasbo/public/uploads/footer_working_hour_icon.png" alt="Icon"></li>
                         <li>
                             <h4>Jam Kerja</h4>
                             <p>
@@ -654,32 +654,32 @@ Sabtu dan Minggu : Libur							</p>
         <div class="row">
             <div class="col-sm-6 col-md-3 col-lg-3 footer-col wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
                 <h3>Tentang Kami</h3>
-                    <img src="../naviri.co.id/public/img/logo-wingroup.png" alt="" style="margin-bottom: 10px;">
+                    <img src="../sombahasbo/public/img/logo-wingroup.png" alt="" style="margin-bottom: 10px;">
                     <p>
                         Dibidang kami, membangun bukan hanya pekerjaan, itu merupakan semangat kami. Dengan setiap proyek yang kami lakukan, kami menetapkan standar yang tinggi dan menempatkan orang-orang terbaik di industri, dengan sepenuh hati dari apa yang kami lakukan untuk menjadikan visi pelanggan kami menjadi nyata.					</p>
             </div>
             <div class="col-sm-6 col-md-3 col-lg-3 footer-col wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
                 <h3>Info Terbaru</h3>
                                     <div class="news-item">
-                        <div class="news-title"><a href="https://naviri.co.id/news/view/3">Ulang Tahun PT. Somba Hasbo yang Ke-47</a></div>
+                        <div class="news-title"><a href="https://sombahasbo/news/view/3">Ulang Tahun PT. Somba Hasbo yang Ke-47</a></div>
                     </div>
                                         <div class="news-item">
-                        <div class="news-title"><a href="https://naviri.co.id/news/view/2">Kunjungan Kerja Pemantauan Proyek Pembangunan Sarana dan Prasarana Air Baku Hulaliu Kab. Maluku Tengah</a></div>
+                        <div class="news-title"><a href="https://sombahasbo/news/view/2">Kunjungan Kerja Pemantauan Proyek Pembangunan Sarana dan Prasarana Air Baku Hulaliu Kab. Maluku Tengah</a></div>
                     </div>
                                         <div class="news-item">
-                        <div class="news-title"><a href="https://naviri.co.id/news/view/1">Rapat Kerja dan Outing - Jakarta 16-20 Agustus 2022</a></div>
+                        <div class="news-title"><a href="https://sombahasbo/news/view/1">Rapat Kerja dan Outing - Jakarta 16-20 Agustus 2022</a></div>
                     </div>
                                 </div>
             <div class="col-sm-6 col-md-3 col-lg-3 footer-col wow fadeInRight" style="visibility: visible; animation-name: fadeInRight;">
                 <h3>Berita Terpopuler</h3>
                                     <div class="news-item">
-                        <div class="news-title"><a href="https://naviri.co.id/news/view/2">Kunjungan Kerja Pemantauan Proyek Pembangunan Sarana dan Prasarana Air Baku Hulaliu Kab. Maluku Tengah</a></div>
+                        <div class="news-title"><a href="https://sombahasbo/news/view/2">Kunjungan Kerja Pemantauan Proyek Pembangunan Sarana dan Prasarana Air Baku Hulaliu Kab. Maluku Tengah</a></div>
                     </div>
                                         <div class="news-item">
-                        <div class="news-title"><a href="https://naviri.co.id/news/view/3">Ulang Tahun PT. Somba Hasbo yang Ke-47</a></div>
+                        <div class="news-title"><a href="https://sombahasbo/news/view/3">Ulang Tahun PT. Somba Hasbo yang Ke-47</a></div>
                     </div>
                                         <div class="news-item">
-                        <div class="news-title"><a href="https://naviri.co.id/news/view/1">Rapat Kerja dan Outing - Jakarta 16-20 Agustus 2022</a></div>
+                        <div class="news-title"><a href="https://sombahasbo/news/view/1">Rapat Kerja dan Outing - Jakarta 16-20 Agustus 2022</a></div>
                     </div>
                                 </div>
             <div class="col-sm-6 col-md-3 col-lg-3 footer-col wow fadeInRight" style="visibility: visible; animation-name: fadeInRight;">
@@ -688,10 +688,10 @@ Sabtu dan Minggu : Libur							</p>
                     <div class="news-title"><a href="index.html">Beranda</a></div>
                 </div>
                 <div class="news-item">
-                    <div class="news-title"><a href="https://naviri.co.id/terms-and-conditions">Terms and Conditions</a></div>
+                    <div class="news-title"><a href="https://sombahasbo/terms-and-conditions">Terms and Conditions</a></div>
                 </div>
                 <div class="news-item">
-                    <div class="news-title"><a href="https://naviri.co.id/privacy-policy">Privacy Policy</a></div>
+                    <div class="news-title"><a href="https://sombahasbo/privacy-policy">Privacy Policy</a></div>
                 </div>
             </div>
         </div>
@@ -715,20 +715,20 @@ Sabtu dan Minggu : Libur							</p>
     <i class="fa fa-angle-up"></i>
 </div>
 
-<script src='../naviri.co.id/public/js/jquery-2.2.4.min.js'></script>
-<script src='../naviri.co.id/public/js/bootstrap.min.js'></script>
-<script src='../naviri.co.id/public/js/bootstrap-datepicker.js'></script>
-<script src='../naviri.co.id/public/js/lightbox.min.js'></script>
-<script src='../naviri.co.id/public/js/owl.carousel.min.js'></script>
-<script src='../naviri.co.id/public/js/jquery.meanmenu.js'></script>
-<script src='../naviri.co.id/public/js/jquery.filterizr.min.js'></script>
-<script src='../naviri.co.id/public/js/waypoints.min.js'></script>
-<script src='../naviri.co.id/public/js/jquery.counterup.min.js'></script>
-<script src='../naviri.co.id/public/js/custom.js'></script>
+<script src='../sombahasbo/public/js/jquery-2.2.4.min.js'></script>
+<script src='../sombahasbo/public/js/bootstrap.min.js'></script>
+<script src='../sombahasbo/public/js/bootstrap-datepicker.js'></script>
+<script src='../sombahasbo/public/js/lightbox.min.js'></script>
+<script src='../sombahasbo/public/js/owl.carousel.min.js'></script>
+<script src='../sombahasbo/public/js/jquery.meanmenu.js'></script>
+<script src='../sombahasbo/public/js/jquery.filterizr.min.js'></script>
+<script src='../sombahasbo/public/js/waypoints.min.js'></script>
+<script src='../sombahasbo/public/js/jquery.counterup.min.js'></script>
+<script src='../sombahasbo/public/js/custom.js'></script>
 <!-- tambahan -->
-<script src='../naviri.co.id/public/js/venobox.min.js'></script>
-<script type="text/javascript" src="../naviri.co.id/public/vendor/assets/src/jquery.flashy.min.js"></script>
-<script type="text/javascript" src="../naviri.co.id/public/vendor/assets/js/main.js"></script>
+<script src='../sombahasbo/public/js/venobox.min.js'></script>
+<script type="text/javascript" src="../sombahasbo/public/vendor/assets/src/jquery.flashy.min.js"></script>
+<script type="text/javascript" src="../sombahasbo/public/vendor/assets/js/main.js"></script>
 <script type="text/javascript">
     // venobox
     $(document).ready(function(){
@@ -738,5 +738,5 @@ Sabtu dan Minggu : Libur							</p>
 
 </body>
 
-<!-- Mirrored from www.naviri.co.id/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 04 Sep 2023 04:50:20 GMT -->
+<!-- Mirrored from www.sombahasbo/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 04 Sep 2023 04:50:20 GMT -->
 </html>
